# linux

./: cmake_test_project.vimrc
010editor/: how-run.txt
010editor/templates/: sig.hpp
ProjectCmake/: MyCmake.py  MyColor.py  MyCreateProject.py  MyCreateVimrc.py  MyFindCompilers.py  MyGit.py  MyWriteMain.py  errors.md  find_compilers.py  git_benchmark.py  main.cpp  vimrc_create.py
ProjectCmake/Project/: CMakeLists.txt
bash/: .bashrc  patch.sh
cmake_test_project/: .vimrc  create.sh  install.sh  main.py  make_project  pcreate.py  vimrc_create.py
gdb/: .gdbinit  install.sh
git/: auth.sh  config.py  pull.sh  push.sh
python/: 33  build.py  create_src_code.py  test
sway/: keyboard.sh
vcpkg/: install.sh
vifm/: config.sh  install.sh  vifmrc
vim/: readme.md
vim/config/local/: .vimrc_attach  .vimrc_launch
vim/config/root/: .vimrc
youcompleteme/: add-rep.sh  build.txt  install.txt  ubuntu-22.04-clang-16-install.sh
